# xchk_core

./: .gitignore  boot_django.py  load_tests.py  makemigrations.py  pyproject.toml  setup.cfg  setup.py
xchk_core/: MultipleChoiceChecker.py  MultipleChoiceLexer.py  MultipleChoiceListener.py  MultipleChoiceParser.py  MultipleChoicePrinter.py  __init__.py  admin.py  apps.py  checks.py  consumers.py  contentviews.py  context_processors.py  courses.py  forms.py  models.py  renderers.py  routing.py  setup.cfg  strats.py  tasks.py  tests.py  urls.py  views.py
xchk_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
xchk_core/migrations/: 0001_initial.py  0002_auto_20200814_1612.py  0003_auto_20200820_1105.py  0004_auto_20200820_1213.py
xchk_core/signals/: handlers.py
xchk_core/static/xchk_core/js/: springyui.js
xchk_core/templates/xchk_core/: all_courses_overview.html  course_map.html  course_overview.html  index.html  repo_confirm_delete.html  repo_does_not_exist.html  repo_exists.html  repo_form.html  single_course_overview.html
xchk_core/templatetags/: xchk_instructions.py
