[tool.poetry]
name = "xchk-core"
version = "0.1.4"
description = "Core functionality for the xchk teaching framework"
authors = ["Vincent Nys <vincentnys@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
django-enumfield = "^2.0.1"
python-igraph = "^0.8.2"
pinax-notifications = "^6.0.0"
graphviz = "^0.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
