[tool.poetry]
name = "xchk-core"
version = "0.2.6"
description = "Core functionality for the xchk teaching framework"
authors = ["Vincent Nys <vincentnys@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
django-enumfield = "^2.0.1"
pinax-notifications = "^6.0.0"
iteration-utilities = "^0.10.1"
cryptography = "^3.0.0"

[tool.poetry.dev-dependencies]
beautifulsoup4 = "^4.9.1"
django-allauth = "0.40.0"
redgreenunittest = "^0.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
