[metadata]
name = xchk
version = 0.0.1
description = Teaching framework built on Django
long_description = file:README.rst
url = https://github.com/v-nys/xchk
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Education :: Computer Aided Instruction (CAI)
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.7
setup_requires =
    setuptools >= 38.3.0
# TODO: plenty of requirements, comb through them!
install_requires =
    Django>=2.2
